  thread pool.  This means all supported sequence formats (SAM, BAM and CRAM)
  now support multi-threaded reading and writing.

  Note that the multi-threaded SAM reader does not currently support seek
  operations.  Trying to do this (for example with an iterator range request)
  will result in the SAM readers dropping back to single-threaded mode.

* Saving a file with a '.sam.gz' suffix will write BGZF-compressed SAM format.

* hts_detect_format() no longer identifies arbitrary text files as SAM.
  Instead the first few lines are checked for @HD/etc headers or having
  11 or more SAM-like columns.  It also identifies BED/FASTA/FASTQ files
  and several index formats.  (#200, #719, PR #721)

* Empty (0-length) files are no longer considered to be valid SAM files.
  Input files without any headers or records at all are usually seen in
  pipelines such as `somecmd | samtools ...` with `somecmd` aborting and
  outputting nothing, and it is beneficial for the second command to
  propagate the error.  (#261)

* New API functions hts_reglist_create() and sam_itr_regarray() are added
  to create hts_reglist_t region lists from `chr:<from>-<to>` type region
  specifiers.

* An improved region parsing function hts_parse_region() is added.  This
  is designed to help deal with ambiguities that arise when reference names
  contain colons followed by numbers.  It does this by checking possible
  names against the known list of references in the input file.  When even
  this method fails (for example when names "chr1" and "chr1:100-200" both
  exist) the reference name part can be quoted using curly braces.  Thus
  "{chr1}:100-200" and "{chr1:100-200}" disambiguate the above example.

  Specialisations of this function sam_parse_region() and fai_parse_region()
  are also added for SAM/BAM/CRAM files and fasta/fastq files respectively.
  HTSlib iterator functions that accept a region specifier have been
  upgraded to use the new interface.
